--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ Flask-JWT-Extended==4.6.0
 marshmallow==3.21.1
 marshmallow-sqlalchemy==0.29.0
 PyMySQL==1.1.0
+psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 groq==0.4.1
 gunicorn==21.2.0
