Fix netlify.toml: use root base directory

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [build]
-  base = "frontend"
+  base = "."
   publish = "frontend/html"
+
+[build.environment]
+  NODE_VERSION = "22"
 
 [[redirects]]
   from = "/*"
